--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
 body {
     background:
     linear-gradient(
@@ -8,9 +9,46 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    font-family: 'Open Sans', sans-serif;
 }
 
 * {
     margin: 0;
     padding: 0;
 }
+
+
+
+/*
+	Theme Color Code: #0f748f;
+*/
+
+:root{
+  --theamColor:#333;
+  --textColor:white;
+}
+
+
+ul, ol{
+	padding: 0px;
+	margin: 0px;
+	list-style-type: none;
+}
+
+a, input, textarea, select, button{
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+	outline: none;
+}
+
+a:hover{
+	text-decoration: none
+}
+
+.paddingTB100{
+	padding: 100px 0;
+}
+
